feat(presentation): Add Lovable maquette mention for design process - Show methodical design approach before coding - Add design-process component with CSS - Update speaker notes with Lovable talking points

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -117,15 +117,20 @@
                             <div class="design-item">
                                 <span class="design-label">Couleurs</span>
                                 <div class="color-swatches">
-                                    <span class="swatch" style="background: #1e73be;" title="Primary"></span>
-                                    <span class="swatch" style="background: #10b981;" title="Success"></span>
+                                    <span class="swatch" style="background: #1e73be;" title="SkyLounge Blue"></span>
+                                    <span class="swatch" style="background: #10b981;" title="Success Green"></span>
                                     <span class="swatch" style="background: #1a1a25;" title="Dark"></span>
+                                    <span class="swatch" style="background: #f8f9fa;" title="Light BG"></span>
                                 </div>
                             </div>
                             <div class="design-item">
                                 <span class="design-label">Builder</span>
                                 <span class="design-value">Elementor Pro</span>
                             </div>
+                        </div>
+                        <div class="design-process">
+                            <span class="process-badge">💡 Démarche</span>
+                            <span class="process-text">Maquette sur <strong>Lovable</strong> avant intégration</span>
                         </div>
                     </div>
                     <div class="wp-section pages">
