fix(presentation): Correct Lovable context - personal prototyping, not client validation

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -130,7 +130,7 @@
                         </div>
                         <div class="design-process">
                             <span class="process-badge">💡 Démarche</span>
-                            <span class="process-text">Maquette sur <strong>Lovable</strong> avant intégration</span>
+                            <span class="process-text">Prototypage sur <strong>Lovable</strong> avant intégration Elementor</span>
                         </div>
                     </div>
                     <div class="wp-section pages">
