fix(presentation): Improve slides based on review - Reword 'Budget 0€' to 'Pas de plugins payants' (more professional) - Remove 'demo live' mentions (no access to app) - Remove 'VS Code' references - Update slide 11 notes to focus on critical modules - Adjust timing in speaker notes

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -87,7 +87,7 @@
                     <div class="context-card">
                         <div class="card-icon">🔒</div>
                         <h3>Contrainte Clé</h3>
-                        <p>Budget 0€ plugins → Solution 100% custom sans Amelia/Bookly</p>
+                        <p>Pas de plugins payants → Développement sur-mesure complet</p>
                     </div>
                     <div class="context-card">
                         <div class="card-icon">📊</div>
@@ -474,7 +474,7 @@ function cw_get_lock_ttl($offre_id) {
             <div class="slide-content">
                 <div class="section-label animate-in">03 - Application</div>
                 <h2 class="slide-title animate-in delay-1">Architecture Globale</h2>
-                <p class="slide-subtitle animate-in delay-1">→ Démo live de l'application après cette slide</p>
+                <p class="slide-subtitle animate-in delay-1">Communication Frontend ↔ Backend via REST API</p>
                 <div class="architecture-diagram animate-in delay-2">
                     <div class="arch-layer frontend">
                         <div class="layer-label">FRONTEND</div>
