--- a/presentation/index.html
+++ b/presentation/index.html
@@ -87,7 +87,7 @@
                     <div class="context-card">
                         <div class="card-icon">🔒</div>
                         <h3>Contrainte Clé</h3>
-                        <p>Budget 0€ plugins → Solution 100% custom sans Amelia/Bookly</p>
+                        <p>Pas de plugins payants → Développement sur-mesure complet</p>
                     </div>
                     <div class="context-card">
                         <div class="card-icon">📊</div>
@@ -117,15 +117,20 @@
                             <div class="design-item">
                                 <span class="design-label">Couleurs</span>
                                 <div class="color-swatches">
-                                    <span class="swatch" style="background: #1e73be;" title="Primary"></span>
-                                    <span class="swatch" style="background: #10b981;" title="Success"></span>
+                                    <span class="swatch" style="background: #1e73be;" title="SkyLounge Blue"></span>
+                                    <span class="swatch" style="background: #10b981;" title="Success Green"></span>
                                     <span class="swatch" style="background: #1a1a25;" title="Dark"></span>
+                                    <span class="swatch" style="background: #f8f9fa;" title="Light BG"></span>
                                 </div>
                             </div>
                             <div class="design-item">
                                 <span class="design-label">Builder</span>
                                 <span class="design-value">Elementor Pro</span>
                             </div>
+                        </div>
+                        <div class="design-process">
+                            <span class="process-badge">💡 Démarche</span>
+                            <span class="process-text">Prototypage sur <strong>Lovable</strong> avant intégration Elementor</span>
                         </div>
                     </div>
                     <div class="wp-section pages">
@@ -469,7 +474,7 @@ function cw_get_lock_ttl($offre_id) {
             <div class="slide-content">
                 <div class="section-label animate-in">03 - Application</div>
                 <h2 class="slide-title animate-in delay-1">Architecture Globale</h2>
-                <p class="slide-subtitle animate-in delay-1">→ Démo live de l'application après cette slide</p>
+                <p class="slide-subtitle animate-in delay-1">Communication Frontend ↔ Backend via REST API</p>
                 <div class="architecture-diagram animate-in delay-2">
                     <div class="arch-layer frontend">
                         <div class="layer-label">FRONTEND</div>
